--- a/LittlePHP/todo.txt
+++ b/LittlePHP/todo.txt
@@ -1,2 +1,30 @@
 ==>1、Log 每天一个log文件
 ==>2、sql注入 防范
+
+3、404等页面
+
+4、db类完善，封装一些常用sql操作
+   数据库分库分表
+
+5、controller基类
+    参数过滤、输出json、session验证等，完全可以放到基类里
+
+6、dao类、model类的基类
+
+7、配置文件写成 php格式
+
+    class MysqlConf{
+        private static $_mysql_config=array(
+            'wn_test' => array('host'=>'xxxxx', 'port'=>3306, 'username'=>'root', 'password'=>'', 'driver'=>'mysql', 'timeout'=>3),
+            'wn_test2' =>array('host'=>'xxxxx', 'port'=>3306, 'username'=>'root', 'password'=>'', 'driver'=>'mysql', 'timeout'=>10),
+        );
+
+        public static function get($tag_name){
+            $tag_name = strval($tag_name);
+            if(!isset(self::$_mysql_config[$tag_name])){
+                return false;
+            }
+            $config = self::$_mysql_config[$tag_name];
+            return $config;
+        }
+    }
